--- a/costura/static/css/ordens.css
+++ b/costura/static/css/ordens.css
@@ -22,17 +22,31 @@
     width: 70%;
 }
 
-input select {
-    background-color: aquamarine;
+.select2.select2-container {
+    width: 90% !important;
+    margin: 0.5rem 0 1rem 0;
 }
 
-.tt>* {
-    width: 90%;
-    margin: 1rem 0;
+.select2.select2-container .select2-selection {
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    height: 48px;
+    outline: none !important;
+    overflow: hidden;
 }
 
 .select2-container--default .select2-selection--single {
-    height: 2rem;
     font-size: 1.2em;
+}
 
+.select2-container .select2-selection--single .select2-selection__rendered {
+    line-height: 46px;
+}
+
+.select2.select2-container .select2-selection .select2-selection__arrow {
+    background: #f8f8f8;
+    border-left: 1px solid #ccc;
+    border-radius: 0 3px 3px 0;
+    height: 46px;
+    width: 33px;
 }
