--- a/costura/cliente/templates/cliente/cadastro_cliente.html
+++ b/costura/cliente/templates/cliente/cadastro_cliente.html
@@ -8,8 +8,8 @@
 {% block content %}
 <h1 style="color: white;">Cadastro Cliente</h1>
 
-<div class="cardi">
-    <form method='post'>
+<div class="card">
+    <form class='c2' method='post'>
         {% csrf_token %}
             {{form}}
 
