--- a/costura/costureiras/templates/costureiras/cadastro_cost.html
+++ b/costura/costureiras/templates/costureiras/cadastro_cost.html
@@ -1,12 +1,17 @@
 {% extends "layout.html" %}
+{% load static %}
+
+{% block css %}
+    <link rel="stylesheet" href="{% static "css/costureira.css" %}">
+{% endblock css %}
 
 {% block content %}
     <h1>Cadastro funcionário</h1>
     <div class="card">
-        <form method='post'>
+        <form class='c2' method='post'>
                 {% csrf_token %}
                 {{form}}
-                <button type="submit">Concluir</buttxson>
+            <input type="submit" value='Concluir'>
         </form>
     </div>
     
