--- a/costura/static/css/styles.css
+++ b/costura/static/css/styles.css
@@ -99,22 +99,62 @@ h1 {
     z-index: -1;
 }
 
-.card form {
-    display: flex;
-    flex-direction: column;
+.card form.c1 {
+    margin-top: 1.1rem;
+
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 0.5rem;
+
+    & input,
+    textarea,
+    button {
+        width: 90%;
+        padding: 10px;
+        font-size: 16px;
+        min-height: 48px;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+    }
+
+    & label {
+        display: block;
+    }
+
 }
 
-.card form input,
-.card form select,
-.card form textarea,
+.card form.c2 {
+    margin-top: 1.1rem;
+
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1rem;
+
+    & input {
+        width: 90%;
+        padding: 10px;
+        font-size: 16px;
+        min-height: 48px;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+    }
+
+    & label {
+        display: block;
+    }
+}
+
 .card form button {
-    margin: 10px 0;
-    padding: 10px;
-    font-size: 16px;
-}
+    margin-top: 40px;
+    background-color: #ff7f50;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
 
-.card form input {
-    width: 90%;
+    &:hover {
+        background-color: #ff5a20;
+    }
 }
 
 .block {
@@ -130,22 +170,6 @@ h1 {
     justify-content: space-between;
 }
 
-
-.card form label {
-    display: block;
-}
-
-.card form button {
-    background-color: #ff7f50;
-    color: #fff;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-}
-
-.card form button:hover {
-    background-color: #ff5a20;
-}
 
 .card-list {
     display: grid;
