--- a/costura/templates/layout.html
+++ b/costura/templates/layout.html
@@ -23,8 +23,8 @@
             <li><a href="/"><i class="fas fa-home"></i>Dashboard</a></li>
             <li><a href="{% url "ordens:ordens" %}"><i class="fas fa-clipboard-list"></i>Ordens de Serviço</a></li>
             <li><a href="{% url "servicos:servicos" %}"><i class="fas fa-wrench"></i>Cadastrar Serviço/Alterar Valor</a></li>
-            <li><a href="{% url "cliente:clientes" %}"><i class="fas "></i>Dados dos Clientes</a></li>
-            <li><a href="{% url "costureiras:main" %}"><i class="fas "></i>Costureiras</a></li>
+            <li><a href="{% url "cliente:clientes" %}"><i class="fa fa-id-badge	 "></i>Dados dos Clientes</a></li>
+            <li><a href="{% url "costureiras:main" %}"><i class="fa fa-leaf "></i>Costureiras</a></li>
         </ul>
     </div>
     <div class="main-content">
