--- a/costura/static/css/styles.css
+++ b/costura/static/css/styles.css
@@ -24,6 +24,10 @@ body {
     height: 100vh;
     position: fixed;
     z-index: 10;
+
+    & i {
+        padding-right: 5px;
+    }
 }
 
 .sidebar h2 {
